--- a/#src/scss/style.scss
+++ b/#src/scss/style.scss
@@ -1,8 +1,9 @@
 @import "mixins";
-
 @import "fonts";
+@import "reset";
 
-*{
-    margin: 0;
-    padding: 0;
+.container{
+    max-width: 1200px;
+
+    margin: 0 auto;
 }
