--- a/#src/scss/application.scss
+++ b/#src/scss/application.scss
@@ -1,14 +1,34 @@
 .application-block {
     width: 100%;
-    margin: 200px 0px;
+    margin: 200px 0 0 0;
+
+    @include mobile-l {
+        margin: 100px 0 0 0;
+    }
 }
 .application {
     display: flex;
     justify-content: space-between;
 
+    @include tablet {
+        flex-direction: column;
+        align-items: center;
+
+        &__header, &__form {
+            width: 100%;
+
+            margin-bottom: 40px;
+        }
+    }
+
 		&__header {
             display: flex;
             flex-direction: column;
+
+            @include laptop {
+                width: 25%;
+            }
+            
         }
 
 		&__header-text {
@@ -17,6 +37,10 @@
             font-weight: 500;
             font-size: 37px;
             line-height: 120%;
+
+            @include mobile-l {
+                font-size: 28px;
+            }
         }
 
 		&__description {
@@ -26,9 +50,14 @@
             font-weight: 400;
             font-size: 20px;
             line-height: 140%;
+            width: 50%;
 
-            p {
-                width: 50%;
+            @include laptop {
+                width: 100%;
+            }
+
+            @include mobile-l {
+                font-size: 18px;
             }
         }
 
@@ -37,6 +66,10 @@
             display: flex;
             justify-content: space-between;
             flex-direction: column;
+
+            @include laptop {
+                width: 60%;
+            }
         }
 
         &__name, &__phone, &__comment {
@@ -63,6 +96,10 @@
                 justify-content: space-between;
                 flex-direction: row;
                 align-items: center;
+
+                @include mobile-l {
+                    flex-direction: column;
+                }
             }
         }
 
@@ -77,6 +114,11 @@
             line-height: 100%;
             p {
                 color: $color-3;
+            }
+
+            @include mobile-l {
+                width: 100%;
+                margin-top: 20px;
             }
         }
 }
