--- a/#src/scss/footer.scss
+++ b/#src/scss/footer.scss
@@ -1,6 +1,10 @@
 .footer-block {
     width: 100%;
     margin-top: 200px;
+
+    @include mobile-l {
+        margin-top: 100px;
+    }
 }
 .footer {
     display: flex;
@@ -10,6 +14,10 @@
             display: flex;
             justify-content: space-between;
             padding: 100px 0px;
+
+            @include mobile-l {
+                flex-direction: column;
+            }
         }
 
 		&__tagline {
@@ -22,10 +30,10 @@
             font-weight: 500;
             font-size: 30px;
             line-height: 120%;
-        }
 
-        &__leave-request {
-            padding-top: 62px;
+            @include mobile-m{
+                width: 100%;
+            }
         }
 
 		&__body-menu {
@@ -35,6 +43,11 @@
 
             @include tablet {
                 width: 40%;
+            }
+
+            @include mobile-l {
+                width: 100%;
+                margin-top: 50px;
             }
         }
 
@@ -49,6 +62,10 @@
 
             @include tablet {
                 width: 70%;
+            }
+
+            @include mobile-l {
+                width: 100%;
             }
         }
 
@@ -106,9 +123,17 @@
             display: flex;
             justify-content: space-between;
             padding: 43px 0px;
+
+            @include mobile-s {
+                flex-direction: column-reverse;
+            }
         }
 
 		&__credits {}
 
-		&__social-links {}
+		&__social-links {
+            @include mobile-l{
+                width: 100%;
+            }
+        }
 }
