--- a/#src/scss/header-theme.scss
+++ b/#src/scss/header-theme.scss
@@ -9,6 +9,11 @@
 		&__tagline {
             display: flex;
             justify-content: space-between;
+
+            @include mobile-l{
+                flex-direction: column;
+                align-items: center;
+            }
         }
 
 		&__header {
@@ -17,6 +22,10 @@
             font-weight: 500;
             font-size: 45px;
             line-height: 120%;
+
+            @include mobile-l {
+                font-size: 32px;
+            }
         }
 
 		&__sub-header {
@@ -26,16 +35,51 @@
             font-weight: 400;
             font-size: 20px;
             line-height: 140%;
+
+            @include mobile-l {
+                width: 100%;
+                text-align: center;
+            }
         }
 
 		&__image {
             margin-top: 135px;
             position: absolute;
+            img {
+                @include small-desktop {
+                    width: 100%;
+                }
+            }
+
+            @include mobile-l {
+                display: none;
+            }
         }
 
 		&__advantages {
             margin-top: 450px;
-            padding: 485px 0px 150px 0px;
+            padding: 470px 0px 150px 0px;
             position: relative;
+
+            @include laptop {
+                padding-top: 200px;
+                display: flex;
+                justify-content: center;
+            }
+
+            @include tablet{
+                padding-top: 100px;
+
+                .cards-advantages {
+                    &__card {
+                        width: 250px;
+                    }
+                }
+            }
+
+            @include mobile-l {
+                padding-top: 0;
+                margin-top: 50px;
+            }
         }
 }
