--- a/#src/scss/home_page/_advantages.scss
+++ b/#src/scss/home_page/_advantages.scss
@@ -1,5 +1,8 @@
 .advantages-block {
     width: 100%;
+    @include mobile-l {
+        margin: 100px 0px;
+    }
 }
 .advantages {
     display: flex;
@@ -20,6 +23,14 @@
             justify-content: center;
         }
     }
+
+    @include mobile-l {
+        padding: 0 0 100px 0;
+
+        &__header {
+            width: 100%;
+        }
+    }
 }
 .cards-advantages {
     width: 100%;
@@ -32,9 +43,18 @@
         justify-content: space-evenly;
     }
 
+    @include mobile-l {
+        width: 100%;
+    }
+
     &__card {
         width: 290px;
         padding: 35px 70px;
+
+        @include mobile-m {
+            width: 100%;
+            padding: 35px 0;
+        }
     }
 
     &__header {
