--- a/#src/scss/home_page/_services.scss
+++ b/#src/scss/home_page/_services.scss
@@ -1,13 +1,18 @@
 .services-block {
     width: 100%;
     margin: 200px 0px;
+
+    @include mobile-l {
+        margin: 0px 0px;
+    }
 }
 .services {
     display: flex;
     justify-content: space-between;
     flex-direction: column;
 
-		&__header {}
+		&__header {
+        }
 
 		&__cards {
             padding-top: 100px;
@@ -16,5 +21,9 @@
                     width: 250px;
                     height: 250px;
                 }
+
+            @include mobile-l {
+                padding-top: 0;
+            }
         }
 }
