--- a/#src/scss/home_page/_works.scss
+++ b/#src/scss/home_page/_works.scss
@@ -1,6 +1,10 @@
 .works-block {
     width: 100%;
     margin: 200px 0px;
+
+    @include mobile-l {
+        margin: 100px 0px;
+    }
 }
 .works {
     display: flex;
@@ -14,6 +18,10 @@
             justify-content: space-between;
             flex-wrap: wrap;
             margin-top: 60px;
+
+            @include mobile-l {
+                margin-top: 0px;
+            }
         }
 
 		&__left-column {}
@@ -42,6 +50,14 @@
 		&__image {
             opacity: 1;
             transition: opacity 124ms linear, transform 124ms linear;
+            @include mobile-l {
+                width: 100%;
+                height: 200px;
+            }
+
+            @include mobile-s {
+                height: 150px;
+            }
         }
 
 		&__header {}
