--- a/#src/scss/service-page.scss
+++ b/#src/scss/service-page.scss
@@ -6,7 +6,6 @@
     flex-direction: column;
 
 		&__header {
-            margin-bottom: 145px;
         }
 
 		&__body {
@@ -20,6 +19,22 @@
             img {
                 margin-left: 60px;
             }
+
+            @include tablet {
+                flex-direction: column;
+                align-items: center;
+
+                img {
+                    margin: 0;
+                    margin-top: 50px;
+                }
+            }
+
+            @include mobile-l {
+                img {
+                    width: 100%;
+                }
+            }
         }
 
 		&__name {
@@ -32,6 +47,18 @@
             line-height: 120%;
 
             width: 50%;
+
+            @include tablet {
+                width: 100%;
+            }
+
+            @include mobile-l {
+                font-size: 28px;
+            }
+
+            @include mobile-s {
+                font-size: 22px;
+            }
         }
 
 		&__description {
@@ -40,6 +67,10 @@
             font-weight: 400;
             font-size: 16px;
             line-height: 150%;
+
+            @include mobile-l {
+                font-size: 12px;
+            }
         }
 
 		&__image {}
@@ -49,6 +80,26 @@
             display: flex;
             justify-content: space-between;
             flex-direction: column;
+
+            img {
+                width: 30%;
+            }
+
+            .card-text {
+                width: 30%;
+            }
+
+            @include mobile-l {
+                img {
+                    width: 100%;
+                    margin: 20px 0;
+                }
+
+                .card-text {
+                    width: 100%;
+                    margin: 20px 0;
+                }
+            }
         }
 
 		&__images {
@@ -67,7 +118,6 @@
 .card-text {
     display: flex;
     flex-direction: column;
-    width: 360px;
 
 		&__header {
             margin-bottom: 20px;
