--- a/#src/scss/services-nav-menu.scss
+++ b/#src/scss/services-nav-menu.scss
@@ -8,6 +8,7 @@
             width: 100%;
             display: flex;
             flex-direction: row;
+            overflow-x: auto;
         }
 
 		&__card {
