--- a/#src/scss/services-page.scss
+++ b/#src/scss/services-page.scss
@@ -13,12 +13,20 @@
             line-height: 120%;
         }
 
-		&__services-list {}
+		&__services-list {
+
+        }
 
 		&__service {
             display: flex;
             justify-content: space-between;
             margin: 150px 0px;
+
+            @include mobile-l {
+                flex-direction: column;
+                align-items: center;
+                margin: 70px 0;
+            }
         }
 
 		&__left-column {
@@ -45,6 +53,14 @@
                     color: #ffffff;
                 }
             }
+
+            @include tablet {
+                width: 250px;
+                flex-direction: column;
+                justify-content: center;
+                align-items: center;
+                padding: 35px 0;
+            }
         }
 
 		&__logo {            
@@ -66,12 +82,20 @@
             p {
                 transition: color 0.15s;
             }
+
+            @include tablet {
+                margin-left: 0;
+            }
         }
 
 		&__right-column {
             width: 50%;
             display: flex;
             flex-direction: column;
+
+            @include mobile-l {
+                width: 100%;
+            }
         }
 
 		&__sub-services-list {
@@ -89,6 +113,8 @@
                 font-size: 16px;
                 line-height: 100%;
             }
+
+
         }
 
 		&__list-left-column {}
