--- a/#src/scss/solutions-page.scss
+++ b/#src/scss/solutions-page.scss
@@ -20,10 +20,21 @@
 			display: flex;
 			justify-content: space-between;
 			margin-bottom: 200px;
+
+			@include tablet {
+				flex-direction: column;
+			}
 		}
 
 		&__image {
 			margin-right: 60px;
+
+			@include mobile-l {
+				margin: 0;
+				img {
+					width: 100%;
+				}
+			}
 		}
 
 		&__info {
